static/styles/includes/headers.less
.heading(@size) {
  font-size: @size;
  line-height: @size + 0.5rem;
}
.hd-xl, h1 {
  .heading(4rem);
}
.hd-l, h2 {
  .heading(2.25rem);
}
.hd-m, h3 {
  .heading(2rem);
}
.hd-s, h4 {
  .heading(1.75em);
}
.hd-xs, h5 {
  .heading(1.5rem);
}
.hd-xxs, h6 {
  .heading(1.25rem);
}

.header-info, .jumbotron-info {
  padding-top: @header-height;
  background-image: url('/static/img/header-abstract.png');
  background-repeat: no-repeat;
  background-color: #fff;
  background-position: 120% -10px;
  padding-left: @side-margin;
  border-bottom: 1px solid @light-border;
  padding-bottom: 10px;
}

.header-info {
  h1 {
    max-width: 900px;
    width: 65%;
    margin-left: auto;
    margin-right: auto;
  }
}

.header-search-box {
  min-width: 100px;
  max-width: 250px;
  width: 25%;
  float: left;
  margin: 20px;
}
a {
  transition: all 0.25s ease;
}
.header a,
.header a:visited {
  color: @header-link;
  text-decoration: none;
}
.header a:hover {
  text-decoration: underline;
}

.header-logo {
  display: inline-block;
  font-weight: 600;
  float: left;
  font-size: 36px;
  background-image: url('/static/img/dat-hex-small.png');
  background-size: 40px;
  background-repeat: no-repeat;
  padding-left: 50px;
  background-position: 0px 8px;
  margin-left: 150px;
  margin-top: 8px;
}

.profile {
  float: right;
  margin-top: 15px;
}

.header-nav {
  height: @header-height;
  position: absolute;
  padding: 0px 20px;
  min-width: 800px;
  top: 0;
  left: 0;
  right: 0;
  opacity: 0.9;
  background-color: @white-background;
  font-weight: 700;
  color: @dark-blue;
  font-size: 20px;
  border-bottom: 1px solid @white-border;
}
.header-nav-links {
  margin-right: 120px;
  float: right;
}
.header-nav-list {
  line-height: @header-height;
  margin: 0;
}
.header-nav-list,
.header-nav-list li {
  display: inline-block;
}
.header-nav-list li {
  margin-right: 30px;
}

